--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 <div class="config-time">
                     <div class="config-time__input">
                         <label class="time-label" for="input-pomodoro">Pomodoro</label>
-                        <input class="time-input" type="number" id="input-pomodoro" min="0" max="59">
+                        <input class="time-input" type="number" id="input-pomodoro" min="0" max="59" pattern="[0-9]*">
                     </div>
                     <div class="config-time__input">
                         <label class="time-label" for="input-short">Short Break</label>
-                        <input class="time-input" type="number" id="input-short" min="0" max="59">
+                        <input class="time-input" type="number" id="input-short" min="0" max="59" pattern="[0-9]*">
                     </div>
                     <div class="config-time__input">
                         <label class="time-label" for="input-long">Long Break</label>
-                        <input class="time-input" type="number" id="input-long" min="0" max="59">
+                        <input class="time-input" type="number" id="input-long" min="0" max="59" pattern="[0-9]*">
                     </div>
                 </div>
                 <h3>COLOR MODE</h3>
